# gnupg-windows-npth

./: CMakeLists.txt  npth-config.h.in
w32/: npth.h
